--- a/ContactListApp/Storyboards/Base.lproj/Main.storyboard
+++ b/ContactListApp/Storyboards/Base.lproj/Main.storyboard
@@ -163,7 +163,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tsg-SY-T7y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2164" y="352"/>
+            <point key="canvasLocation" x="2138" y="352"/>
         </scene>
         <!--Person List-->
         <scene sceneID="Vap-Ht-9yV">
@@ -174,6 +174,7 @@
                         <barButtonItem key="backBarButtonItem" title="Back" id="UJJ-S7-ZzP"/>
                     </navigationItem>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hwy-Nc-VyV">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
